--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,10 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+solc_version = "0.8.26"
+evm_version = "cancun"
+optimazer_runs = 800 
+via_ir = false 
+ffi = true
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
